Identity Register, Gender Enum,Regex Mail

--- a/ProniaBackEnd/Views/Basket/Index.cshtml
+++ b/ProniaBackEnd/Views/Basket/Index.cshtml
@@ -69,16 +69,14 @@
                                                 <span class="amount">$@item.Price</span>
                                             </td>
                                             <td class="quantity">
-                                                <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box"
-                                                           value="@item.Count"
-                                                           type="text" />
-                                                    <div class="dec qtybutton">
+                                                <div class="d-flex btn btn-dark">
+                                                    <a class="">
                                                         <i class="fa fa-minus"></i>
-                                                    </div>
-                                                    <div class="inc qtybutton">
+                                                    </a>
+                                                    <p class="fw-bold mx-2">@item.Count</p>
+                                                    <a class="">
                                                         <i class="fa fa-plus"></i>
-                                                    </div>
+                                                    </a>
                                                 </div>
                                             </td>
                                             <td class="product-subtotal">
