add Order and EmailService

--- a/ProniaBackEnd/Views/Shared/Components/Header/Default.cshtml
+++ b/ProniaBackEnd/Views/Shared/Components/Header/Default.cshtml
@@ -821,7 +821,7 @@
             </div>  
             <div class="minicart-item_total">
                 <span>Total</span>
-                <span class="ammount">$79.35</span>
+                <span class="ammount">$@total</span>
             </div>
             <div class="group-btn_wrap d-grid gap-2">
                 <a asp-action="Index" asp-controller="Basket" class="btn btn-dark">View Cart</a>
