--- a/ProniaBackEnd/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Product/Index.cshtml
@@ -1,17 +1,17 @@
-﻿@model List<Product>
+﻿@model PaginateVM<Product>
 
 @{
-    int count = 0;
+    int count = (Model.CurrentPage-1)*3;
 }
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Product Table</h4>
 
-            
+
             <a asp-controller="Product" asp-action="Create" class="btn btn-success">Create Product </a><br>
-            
-            @Html.Raw(TempData["Messgae"])
+
+            @Html.Raw(TempData["Message"])
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
@@ -38,7 +38,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (Product product in Model)
+                        @foreach (Product product in Model.Items)
                         {
                             count++;
                             <tr>
@@ -67,6 +67,24 @@
                     </tbody>
                 </table>
             </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination" style="justify-content:center">
+                    <li class="page-item @(Model.CurrentPage-1==0?"disabled":"")">
+                        <a class="page-link" asp-route-page="@(Model.CurrentPage-2)" asp-action="Index" asp-controller="Product" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    @for (int i = 1; i <=Model.TotalPage; i++)
+                    {
+                        <li class="page-item @(i==Model.CurrentPage?"disabled":"")"><a class="page-link" asp-route-page="@(i-1)" asp-action="Index" asp-controller="Product">@i</a></li>
+                    }
+                    <li class="page-item @(Model.CurrentPage==Model.TotalPage?"disabled":"")">
+                        <a class="page-link" asp-route-page="@(Model.CurrentPage)" asp-action="Index" asp-controller="Product" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
