--- a/ProniaBackEnd/Areas/Admin/Views/Tag/Index.cshtml
+++ b/ProniaBackEnd/Areas/Admin/Views/Tag/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<Tag>
+﻿@model PaginateVM<Tag>
 
 @{
-    int count = 0;
+    int count = (Model.CurrentPage)*3;
 }
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
@@ -29,7 +29,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (Tag tag in Model)
+                        @foreach (Tag tag in Model.Items)
                         {
                             count++;
                             <tr>
@@ -52,6 +52,24 @@
                     </tbody>
                 </table>
             </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination" style="justify-content:center">
+                    <li class="page-item @(Model.CurrentPage==0?"disabled":"")">
+                        <a class="page-link" asp-route-page="@(Model.CurrentPage-1)" asp-action="Index" asp-controller="Tag" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    @for (int i = 1; i <= Model.TotalPage; i++)
+                    {
+                        <li class="page-item @(i==Model.CurrentPage?"disabled":"")"><a class="page-link" asp-route-page="@(i-1)" asp-action="Index" asp-controller="Tag">@i</a></li>
+                    }
+                    <li class="page-item @(Model.CurrentPage==Model.TotalPage?"disabled":"")">
+                        <a class="page-link" asp-route-page="@(Model.CurrentPage+1)" asp-action="Index" asp-controller="Tag" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
